MPX Changelog file
== 21.11.06 ==
mi:     added MPX to miSpriteReportDamage
        added id field to miCursorInfoPtr, required to pass through to miDC
        core pointer uses mpCursors array as well.
        added miDCBufferRec for future use with MPX

Files:
        mi/midispcur.c
        mi/misprite.c
        mi/mispritest.h

TAG: MPX_BEFORE_MIDC_API_BREAK

== 20.11.06 ==

mi:     moved core pointer information from miSpriteScreenRec into a
        miCursorInfoRec.
        bugfix in mipointer, semicolon after preprocessor statement

Files:
        mi/mispritest.h
        mi/misprite.c
        mi/mipointer.c


mi:     added MPX to miSprite functions. 

Files:
        mi/mispritest.h
        mi/misprite.c
        mi/mipointer.c
        dix/events.c

NOTE: This version will render multiple cursors but with an artefact each time
when devices alternate.

== 17.11.06 ==
dix:    moved isMPdev field to end of _DeviceIntRec structure

mi:     
        added miMPPointers array to mipointer.c
        added DeviceIntPtr to all miPointerSpriteFuncs. Coming from miPointer
        we use inputInfo.pointer as standard value. ABI BREAK!

ramdac: 
        forcing failed HW Cursor initialisation. MPX needs software rendering.
        changes to use new miPointerSpriteFunc (this required externing
        inputInfo, should probably be fixed at a later point).


RAC: changes to use new miPointerSpriteFuncs.

Files: 
        include/inputstr.h
        mi/mipointer.c
        mi/mipointer.h
        mi/misprite.c
        hw/xfree86/ramdac/xf86HWCurs.c
        hw/xfree86/ramdac/xf86Cursor.c
        hw/xfree86/rac/xf86RAC.c


mi:
        added miCursorInfoRec to contain info of the MPX cursors.
        calling miUpdatePointerSprite() from event queue for MPX devices.
        adding device-specific processing to miPointer*() functions.

dix:    Call to SetCursorPosition in CheckMotion() temporarily disabled.

xfree86/common: call to miPointerUpdateSprite() disabled, is done from the EQ 
