@@ -42,6 +42,7 @@ typedef struct {
 		CursorPtr /*pCursor*/
 );
     Bool	(*PutUpCursor)(
+                int /* deviceid */,
 		ScreenPtr /*pScreen*/,
 		CursorPtr /*pCursor*/,
 		int /*x*/,
@@ -50,6 +51,7 @@ typedef struct {
 		unsigned long /*mask*/
 );
     Bool	(*SaveUnderCursor)(
+                int /* deviceid */,
 		ScreenPtr /*pScreen*/,
 		int /*x*/,
 		int /*y*/,
@@ -57,6 +59,7 @@ typedef struct {
 		int /*h*/
 );
     Bool	(*RestoreUnderCursor)(
+                int /* deviceid */,
 		ScreenPtr /*pScreen*/,
 		int /*x*/,
 		int /*y*/,
@@ -64,6 +67,7 @@ typedef struct {
 		int /*h*/
 );
     Bool	(*MoveCursor)(
+                int /* deviceid */,
 		ScreenPtr /*pScreen*/,
 		CursorPtr /*pCursor*/,
 		int /*x*/,
@@ -76,6 +80,7 @@ typedef struct {
 		unsigned long /*mask*/
 );
     Bool	(*ChangeSave)(
+                int /* deviceid */,
 		ScreenPtr /*pScreen*/,
 		int /*x*/,
 		int /*y*/,
